--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9"
   }
 }
