--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "flowbite": "^2.5.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11"
   },
